crates/id_effect/tests/ui/cap_env1.rs
fn main() {
  let _: id_effect::CapEnv1<id_effect::Env>;
}
